replicaset/daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: demo-daemonset
  namespace: ckp-bootcamp
spec:
  selector:
    matchLabels:
      app: demo-daemonset
  template:
    metadata:
      labels:
        app: demo-daemonset
    spec:
      containers:
        - name: demo-daemonset-container
          image: arwthomasm/ckp-bootcamp-demo:single
          imagePullSecrets:
            - name: regcred
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
