replicaset/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-replicaset-svc
  namespace: ckp-bootcamp
  labels:
    name: demo-replicaset-svc
    app: demo-replicaset
spec:
  type: NodePort
  selector:
    app: demo-replicaset
  ports:
  - port: 80
    targetPort: 8080
