replicaset/replicaset.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-replicaset-svc
  namespace: ckp-bootcamp
  labels:
    name: demo-replicaset-svc
    app: demo-replicaset
spec:
  type: NodePort
  selector:
    app: demo-replicaset
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo-replicaset-route
  namespace: ckp-bootcamp
  labels:
    name: demo-replicaset-route
    app: demo-replicaset
spec:
  host: replicaset.apps.test.ocp4.tm.lab
  to:
    kind: Service
    name: demo-replicaset-svc
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
