replicaset/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo-replicaset-route
  namespace: ckp-bootcamp
  labels:
    name: demo-replicaset-route
    app: demo-replicaset
spec:
  host: replicaset.apps.test.ocp4.tm.lab
  to:
    kind: Service
    name: demo-replicaset-svc
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
